--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,13 @@
 	<div class="navbar navbar-fixed-top">
 		<div class="navbar-inner">
 			<div class="container">
-				<a class="brand" href="#">Treebook</a>
+
+				<% if user_signed_in? %>
+					<%= link_to "Treebook", statuses_path, class: 'brand' %>
+				<% else %>
+					<%= link_to "Treebook", new_user_registration_path, class: 'brand' %>
+				<% end %>
+
 				<ul class="nav">
 					<li><%= link_to "All statuses", statuses_path %></li>
 				</ul>
